@@ -13,11 +13,12 @@ WORKDIR /application
 
 COPY --from=builder /builder/build/libs/*.jar core.jar
 
-RUN java -XX:AOTCacheOutput=app.aot \
+RUN java --enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow \
+    -XX:AOTCacheOutput=app.aot \
     -Dspring.context.exit=onRefresh \
     -Dspring.jpa.hibernate.ddl-auto=none \
     -Dspring.ai.vectorstore.type=none \
     -jar core.jar
 
 EXPOSE 8080
-ENTRYPOINT ["java", "-XX:AOTCache=app.aot", "-jar", "core.jar"]
+ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "--sun-misc-unsafe-memory-access=allow", "-XX:AOTCache=app.aot", "-jar", "core.jar"]
